# FavoritesCrawler

./: .gitignore  LICENSE  README.md  codecov.yml  dev_main.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/: scrapy.cfg
src/constants/: blacklists.py  endpoints.py
src/favorites_crawler/: __init__.py  exceptions.py  itemloaders.py  items.py  middlewares.py  pipelines.py  processors.py  settings.py
src/favorites_crawler/commands/: crawl.py  login.py  restore.py
src/favorites_crawler/constants/: domains.py  endpoints.py  headers.py  path.py  regexes.py
src/favorites_crawler/spiders/: __init__.py  lemon.py  nhentai.py  pixiv.py  twitter.py  yandere.py  yandere_vote.py
src/favorites_crawler/utils/: auth.py  common.py  config.py  cookies.py  files.py  text.py
src/utils/: auth.py  text.py
tests/: test_init.py  test_items.py  test_pipelines.py  test_processors.py
tests/mock/: entry.json
tests/test_commands/: test_crawl.py  test_login.py
tests/test_spiders/: test_base.py  test_nhentai.py  test_pixiv.py  test_twitter.py  test_yandere.py
tests/test_utils/: test_auth.py  test_common.py  test_config.py  test_cookies.py  test_files.py  test_text.py
