[metadata]
name = favorites_crawler
version = 0.0.2
author = RyouMon
author_email = wenslife@outlook.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RyouMon/FavoritesCrawler
project_urls =
    Bug Tracker = https://github.com/RyouMon/FavoritesCrawler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    favors = favorites_crawler:main